version/0.1/_sources/api/ansys/tools/visualization_interface/index.rst.txt






The ``ansys.tools.visualization_interface`` library
===================================================

.. py:module:: ansys.tools.visualization_interface


Summary
-------








.. py:currentmodule:: visualization_interface
.. tab-set::

    .. tab-item:: Subpackages

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.tools.visualization_interface.backends`
            - Provides interfaces.


          * - :py:obj:`~ansys.tools.visualization_interface.types`
            - Provides custom types.


          * - :py:obj:`~ansys.tools.visualization_interface.utils`
            - Provides the Utils package.



    .. tab-item:: Submodules

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.tools.visualization_interface.plotter`
            - Module for the Plotter class.








    .. tab-item:: Attributes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~__version__`
            - 



    .. tab-item:: Constants

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~USE_TRAME`
            - 


          * - :py:obj:`~DOCUMENTATION_BUILD`
            - 


          * - :py:obj:`~TESTING_MODE`
            - 




.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    🖿 backends</api/ansys/tools/visualization_interface/backends/index>
    🖿 types</api/ansys/tools/visualization_interface/types/index>
    🖿 utils</api/ansys/tools/visualization_interface/utils/index>


.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    🗎 plotter</api/ansys/tools/visualization_interface/plotter/index>











Description
-----------


Visualization Interface tool is a Python client library for visualizing the results of Ansys simulations.
















..
    !! processed by numpydoc !!






Module detail
-------------

.. py:data:: USE_TRAME
   :type:  bool
   :value: False


.. py:data:: DOCUMENTATION_BUILD
   :type:  bool
   :value: False


.. py:data:: TESTING_MODE
   :type:  bool

.. py:data:: __version__



